<resources>
    <string name="app_name">User Address</string>
    <string name="settings">Settings</string>
    <string name="img_desc">image description</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in_cap">SIGN IN</string>
    <string name="welcome">Welcome back!</string>
    <string name="get_started">Get Started</string>
    <string name="new_here">New here?</string>
    <string name="user_name_cap">USERNAME</string>
    <string name="email_address_cap">EMAIL ADDRESS</string>
    <string name="password_cap">PASSWORD</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="allready_have_account">Already have a account?</string>
    <string name="sign_in">Sign In</string>
    <string name="few_minutes">It only takes a minute to start..</string>
    <string name="select_location">Select Location</string>
    <string name="location">Location</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_line1">Address Line1</string>
    <string name="address_line2">Address Line2</string>
    <string name="save_cap">SAVE</string>
    <string name="user_name">Username</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
</resources>