<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />

    <ScrollView style="@style/ScrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView style="@style/Card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/tv_signInTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/ubuntu_regular"
                        android:maxLines="2"
                        android:textColor="@color/text_light"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/welcome" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/user_name"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_8sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/password"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18sdp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_signIn"
                            style="@style/Button"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="0dp"
                            android:text="@string/sign_in_cap" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnLoader"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_centerHorizontal="true"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="loader.json"
                            app:lottie_loop="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_newHere"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:fontFamily="@font/ubuntu_regular"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_11ssp"
                            android:text="@string/new_here" />

                        <TextView
                            android:id="@+id/tv_getStarted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="@font/ubuntu_regular"
                            android:maxLines="1"
                            android:padding="@dimen/_2sdp"
                            android:textColor="@color/selector_text_accent"
                            android:textSize="@dimen/_11ssp"
                            android:text="@string/get_started" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>