<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <include layout="@layout/layout_toolbar" />

    <ScrollView style="@style/ScrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView style="@style/Card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_12sdp">

                    <TextView
                        android:id="@+id/tv_signUpMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/text_light"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/few_minutes" />

                    <RelativeLayout
                        android:id="@+id/rl_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_below="@+id/rl_username"
                        android:background="@color/screen_bg">

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/user_name"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rl_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_below="@+id/rl_email"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_8sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/password"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:hint="@string/email_address"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rl_password"
                        android:layout_marginTop="@dimen/_14sdp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_sign_up"
                            style="@style/Button"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="0dp"
                            android:text="@string/create_account" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/btnLoader"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_centerHorizontal="true"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="loader.json"
                            app:lottie_loop="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rl_signUp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:fontFamily="@font/ubuntu_regular"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_11ssp"
                            android:text="@string/allready_have_account" />

                        <TextView
                            android:id="@+id/tv_signIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="@font/ubuntu_regular"
                            android:maxLines="1"
                            android:padding="@dimen/_2sdp"
                            android:textColor="@color/selector_text_accent"
                            android:textSize="@dimen/_11ssp"
                            android:text="@string/sign_in" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>