<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <include layout="@layout/layout_toolbar" />


    <ScrollView
        style="@style/ScrollView"
        android:layout_above="@id/btn_save">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_addNewLocationSecond"
                style="@style/Card"
                android:layout_marginTop="@dimen/_9sdp"
                android:layout_marginBottom="@dimen/_12sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_address_line1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/address_line1"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_address_line2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/address_line2"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textCapWords"
                            android:maxLength="60"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/city"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@color/screen_bg">

                        <EditText
                            android:id="@+id/et_pinCode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@null"
                            android:fontFamily="@font/ubuntu_regular"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="7"
                            android:maxLines="1"
                            android:textColor="@color/text_dark"
                            android:textSize="@dimen/_12ssp"
                            android:hint="@string/pincode"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:text="@string/save_cap" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/btnLoader"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_17ssp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ."
        android:fontFamily="@font/ubuntu_regular"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:singleLine="true"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/_12ssp"
        tools:hint="City"
        tools:ignore="LabelFor" />


</RelativeLayout>